# helmule

./: Cargo.toml  Containerfile  LICENCE.txt  README.md  helmule.yaml
.woodpecker/: build.yaml
examples/: yamlfmt.yml
examples/extensions/vaultwarden/: virtual-service.yaml
examples/giantswarm/: helmule.yaml
examples/giantswarm/charts/: external-secrets-operator.yaml  gitops-server.yaml  zot.yaml
examples/giantswarm/extensions/ci-values/: values-vpa.yaml
examples/giantswarm/extensions/vpa/: vpa.yaml
examples/giantswarm/patches/git/: gitops-server-test-job.patch  gitops-server-values-schema.patch  gitops-server.patch  zot.patch
examples/giantswarm/patches/regexp/: values-patches.yaml
examples/patches/flux-regexp/: patch.yaml
examples/patches/git/: patch-2.diff  patch.diff
examples/patches/regexp/: patch.yaml
examples/use/charts/: vaultwarden.yaml  vaultwardens.yaml
src/: main.rs
src/config/: extension.rs  include.rs  mod.rs  patch.rs
src/helpers/: cli.rs  copy.rs  mod.rs  template.rs
src/mirror/: custom_command.rs  git.rs  mod.rs
src/patch/: mod.rs  regexp.rs
src/source/: git.rs  helm.rs  mod.rs
src/template/: mod.rs
