[package]
name = "helmule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
dircpy = "0.3.15"
env_logger = "0.10.1"
handlebars = "5.0.0"
log = "0.4.20"
regex = "1.10.2"
semver = "1.0.20"
semver_sort = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
serde_yaml = "0.9.29"
tempfile = "3.9.0"
time = { version = "0.3.31", features = ["serde", "formatting", "parsing"]}
which = "5.0.0"
